--- a/IntelX86Exercise/Makefile
+++ b/IntelX86Exercise/Makefile
@@ -2,5 +2,5 @@
 
 
 default:
-	nasm ./src/mbr.asm -o ./obj/mbr.bin -l ./obj/mbr.lst
-	nasm ./src/mbr.asm -o ./obj/mbr.img -l ./obj/mbr.lst
+	nasm ./src/mbr.asm -f bin -o ./obj/mbr.bin -l ./obj/mbr.lst
+	nasm ./src/mbr.asm -f bin -o ./obj/mbr.img -l ./obj/mbr.lst
